--- a/rotate-grid.html
+++ b/rotate-grid.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotate Grid</title>
+    <link rel="stylesheet" href="pagestyles.css">
     <style>
         body {
             font-family: sans-serif;
@@ -13,24 +14,10 @@
             gap: 20px;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         }
-        #contentgrid > div {
-            padding: 1em;
-        }
-        #about { 
-            background-color: #f0f0f0; 
-        }
-        #news { 
-            background-color: #d0d0d0; 
-        }
-        #contact { 
-            background-color: #b0b0b0; 
-        }
-        #casestudies { 
-            background-color: #909090; 
-        }
     </style>
 </head>
 <body>
+    <h1>Shuffling grid items using CSS properties</h1>
     <div id="contentgrid">
         <div id="about">
             <h2>About</h2>
@@ -69,8 +56,7 @@
         }
         // Rotate the order array and set the CSS variables accordingly
         const rotategrid = () => {
-            let first = orders.shift();
-            orders.push(first);
+            orders.push(orders.shift());
             orders.forEach((i, k) => {
                 root.style.setProperty(
                     cssvar.replace('$x', k + 1), orders[k]
@@ -80,6 +66,8 @@
         rotategrid();
         document.querySelector('button').addEventListener('click',rotategrid);
     </script>
+    <nav></nav>
+    <script src="nav.js"></script>
 </body>
 </html>
 
