--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Case studies will be displayed here.</p>
         </div>
     </div>
-    <button>Rotate</button>
+    <button>shuffle</button>
 
 <p>The grid above shuffles around on every reload or when you active `shuffle` button. There are many ways to achieve this effect, but this example uses only CSS properties to set the order of the grid items. The HTML is not altered and there is no DOM manipulation other than accessing the CSS properties of the parent element. This should make this highly performant. The JavaScript code rotates the order of the items in the grid by changing the CSS variables that define their order. Below is the relevant code used to set up the grid and shuffle the items:</p>
 
